<resources>
    <string name="app_name">Atom</string>
    <string name="mine_my_order">我的订单</string>
    <string name="mine_my_order_all">全部</string>
    <string name="order_unconsume">未消费</string>
    <string name="order_unpay">待付款</string>
    <string name="order_uncomment">待评价</string>
    <string name="order_refund">退款</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_maoyan_vip">会员中心</string>
    <string name="mine_achieve">我的成就</string>
    <string name="mine_seatcoupon">优惠券</string>
    <string name="mine_seatcoupon_useful_num">2张可用</string>
    <string name="mine_cinema_emember">影院会员卡</string>
    <string name="mine_shopping_center">商城</string>
    <string name="mine_invite">邀请好友送代金券</string>
    <string name="mine_setting">设置</string>
    <string name="mine_new">new</string>
    <string name="user_phone_binding">手机绑定与更换</string>
    <string name="options_test">测试</string>
    <string name="passport_oauth_login">-其他登录方式-</string>
    <string name="passport_account">账号</string>
    <string name="passport_password">密码</string>
    <string name="passport_please_enter_phone">请输入手机号</string>
    <string name="passport_login_password_is_null">请输入密码</string>
    <string name="passport_login_questions">登录遇到问题?</string>
    <string name="passport_phone_number">手机号</string>
    <string name="passport_code">验证码</string>
    <string name="passport_support_phone">仅支持中国大陆手机号</string>
    <string name="passport_enter_code">请输入验证码</string>
    <string name="passport_retrieve_code">获取验证码</string>
    <string name="passport_login">登录</string>
    <string name="passport_login_term_agreed">登录即视为同意《用户协议》</string>
    <string name="offical_notify">系统通知</string>
    <string name="button_clean_cache">清空缓存</string>
    <string name="button_marketgrade">去评分</string>
    <string name="button_feedback">意见反馈</string>
    <string name="button_app_check">检查新版本</string>
    <string name="button_about">关于</string>
    <string name="settings_user_logout">退出登录</string>
    <string name="user_protocol">用户协议</string>
    <string name="seat_order_detail_kefu_about">客服电话</string>
    <string name="seat_order_detail_kefu_work_time">工作时间：9:00-24:00</string>
    <string name="seat_order_detail_kefu_phone">1010-5335</string>
    <string name="text_user_profile_img">头像</string>
    <string name="text_user_nick_name">昵称</string>
    <string name="text_user_gender">性别</string>
    <string name="text_user_birthday">生日</string>
    <string name="text_user_city">所在城市</string>
    <string name="life_title">生活状态</string>
    <string name="job_title">从事行业</string>
    <string name="user_interest">兴趣爱好</string>
    <string name="user_address">收货地址</string>
    <string name="passport_please_input_phone_number">请输入手机号</string>
    <string name="passport_term_agreed">我已阅读并同意《用户协议》</string>
    <string name="passport_retrieve_verify_code">发送验证码</string>
    <string name="passport_please_input_verify_code">请输入短信验证码</string>
    <string name="passport_submit_verify_code">提交验证码</string>
    <string name="passport_retrieve_again">重新获取</string>
    <string name="passport_set_password">设置密码</string>
    <string name="passport_confirm_password">确认密码</string>
    <string name="passport_signup">注册</string>
    <string name="passport_signup_step1_enter_mobile">1输入手机号</string>
    <string name="passport_signup_step2_enter_verifycode">2输入验证码</string>
    <string name="passport_signup_step3_set_password">3设置密码</string>
    <string name="normal_toast_with_icon">默认样式(带Icon)</string>
    <string name="normal_toast_without_icon">默认样式(不带Icon)</string>
    <string name="warning_toast">警告</string>
    <string name="info_toast">信息</string>
    <string name="info_toast_with_formatting">格式化信息</string>
    <string name="error_toast">错误</string>
    <string name="success_toast">成功</string>
    <string name="custom_configuration">自定义样式</string>
    <string name="basic">Basic</string>
    <string name="basic_notitle">隐藏标题</string>
    <string name="basic_title">显示标题</string>
    <string name="basic_icon">显示图标</string>
    <string name="basic_lists">Basic Lists</string>
    <string name="basic_list_notitle">隐藏标题</string>
    <string name="basic_list_title">显示标题</string>
    <string name="choice_lists">Choice Lists</string>
    <string name="singleChoice">单选选择</string>
    <string name="multiChoice">多项选择</string>
    <string name="input">Input</string>
    <string name="progress">Progress</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="progress_dialog_indeterminate">Progress Dialog (Indeterminate)</string>
    <string name="progress_dialog_indeterminate_horizontal">Progress Dialog (Horizontal Indeterminate)</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="submit">提交</string>
    <string name="shareLocationPrompt">这个程序要访问你的位置</string>
    <string name="please_wait">请稍等…</string>
    <string name="md_done_label">完成</string>
    <string name="input_content">请输入你的名字</string>
    <string name="input_hint">Rogrand</string>
    <string name="socialNetworks">Social Networks</string>
    <string name="md_choose_label">选择</string>
    <string name="clear_selection">取消</string>
    <string name="rationale_location_contacts">Atom请求获取此设备的位置信息</string>
    <string name="url_rogrand">http://www.rogrand.com</string>

</resources>