<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/passport_divider_horizontal"
        android:orientation="vertical"
        android:showDividers="end|beginning">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:text="@string/passport_phone_number"
                android:textColor="@color/passport_black1"
                android:textSize="@dimen/text_h15" />

            <EditText
                android:id="@+id/et_mobile"
                style="@style/passport_editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_weight="1.0"
                android:hint="@string/passport_support_phone"
                android:inputType="phone" />

            <com.rogrand.atom.widget.ButtonStyle
                android:id="@+id/btn_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:minHeight="30dp"
                android:padding="8dp"
                android:text="@string/passport_retrieve_code"
                android:textColor="@color/passport_code_selector"
                android:textSize="@dimen/text_h13"
                app:normal_color="@color/passport_code_tip_back"
                app:press_color="#F1F1F1"
                app:stroke_color="@color/passport_code_border"
                app:stroke_width="1px" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/passport_divider_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:text="@string/passport_code"
                android:textColor="@color/passport_black1"
                android:textSize="@dimen/text_h15" />

            <EditText
                android:id="@+id/et_v_code"
                style="@style/passport_editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_weight="1.0"
                android:hint="@string/passport_enter_code"
                android:inputType="phone" />

        </LinearLayout>
    </LinearLayout>

    <com.rogrand.atom.widget.ButtonStyle
        android:id="@+id/btn_code_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="16dp"
        android:minHeight="44dp"
        android:text="@string/passport_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_h16"
        app:normal_color="@color/hex_f34d41"
        app:press_color="@color/hex_e7493e" />

    <LinearLayout
        android:id="@+id/term_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/passport_login_term_agreed"
            android:textColor="#868686"
            android:textSize="@dimen/text_h12" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0" />

        <TextView
            android:id="@+id/retrieve_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/passport_login_questions"
            android:textColor="#868686"
            android:textSize="@dimen/text_h12" />
    </LinearLayout>
</LinearLayout>