<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:divider="@drawable/passport_divider_horizontal"
        android:orientation="vertical"
        android:showDividers="middle|beginning">

        <EditText
            android:id="@+id/et_password"
            style="@style/passport_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/passport_set_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/passport_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/passport_confirm_password"
            android:inputType="textPassword" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp" />
    </LinearLayout>

    <com.rogrand.atom.widget.ButtonStyle
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="48dp"
        android:text="@string/passport_signup"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_h16"
        app:normal_color="@color/hex_f34d41"
        app:press_color="@color/hex_e7493e" />
</LinearLayout>